--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
         <groupId>org.ngseq.metagenomics</groupId>
-        <artifactId>viraseq</artifactId>
+        <artifactId>virapipe</artifactId>
         <version>0.9</version>
 
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
 
-        <sbt.project.name>viraseq</sbt.project.name>
+        <sbt.project.name>virapipe</sbt.project.name>
         <htsjdk.version>2.5.0</htsjdk.version>
         <scala.version>2.10.5</scala.version>
         <project.version>1.6.1</project.version>
@@ -74,12 +74,6 @@
             <version>${spark.version}</version>
         </dependency>
 
-        <!--dependency>
-          <groupId>org.broadinstitute.gatk</groupId>
-          <artifactId>gatk-root</artifactId>
-          <version>4.0-SNAPSHOT</version>
-        </dependency-->
-
         <dependency>
             <groupId>org.seqdoop</groupId>
             <artifactId>hadoop-bam</artifactId>
@@ -103,7 +97,6 @@
                         <index>true</index>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <!--mainClass>HadoopBAMExample</mainClass-->
                         </manifest>
                     </archive>
                     <attach>false</attach>
@@ -132,38 +125,6 @@
                     <skip>true</skip>
                 </configuration>
             </plugin>
-            <!--plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-shade-plugin</artifactId>
-              <configuration>
-                <shadedArtifactAttached>false</shadedArtifactAttached>
-                <outputFile>${project.build.directory}/scala-${scala.binary.version}/spark-examples-${project.version}-hadoop${hadoop.version}.jar</outputFile>
-                <artifactSet>
-                  <includes>
-                    <include>*:*</include>
-                  </includes>
-                </artifactSet>
-                <filters>
-                  <filter>
-                    <artifact>*:*</artifact>
-                    <excludes>
-                      <exclude>META-INF/*.SF</exclude>
-                      <exclude>META-INF/*.DSA</exclude>
-                      <exclude>META-INF/*.RSA</exclude>
-                    </excludes>
-                  </filter>
-                </filters>
-                <transformers>
-                  <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-                  <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                    <resource>reference.conf</resource>
-                  </transformer>
-                  <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
-                    <resource>log4j.properties</resource>
-                  </transformer>
-                </transformers>
-              </configuration>
-            </plugin-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
